// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults - NoData should render correctly for snapshot test with toggles off 1`] = `
<DocumentFragment>
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
      >
        <li
          class="styledComponents__List-sc-1kfpqgc-0 Dvaww"
        >
          Check for typos or use a different search term
        </li>
      </div>
    </div>
    <div
      class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI styledComponents__StyledGridCol-sc-1kfpqgc-1 gdXNzW"
      >
        <div
          class="styledComponents__ListWrapper-sc-1kfpqgc-2 hgqLmw"
        >
          <div
            class="ant-list ant-list-vertical ant-list-sm ant-list-split"
          >
            <div
              class="ant-list-header"
            >
              Suggestions
            </div>
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <ul
                  class="ant-list-items"
                >
                  <li
                    class="ant-list-item ant-list-item-no-flex"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <svg
                          data-testid="CaretRightList"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <a
                            href="/t/1234/venues"
                          >
                            Venues
                          </a>
                        </h4>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item ant-list-item-no-flex"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <svg
                          data-testid="CaretRightList"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <a
                            href="/t/1234/networks"
                          >
                            Networks
                          </a>
                        </h4>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item ant-list-item-no-flex"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <svg
                          data-testid="CaretRightList"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <a
                            href="/t/1234/dashboard"
                          >
                            Dashboard
                          </a>
                        </h4>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="display: none;"
      >
        <svg
          data-testid="SearchResultNoData"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchResults - NoData should render correctly for snapshot test with toggles on 1`] = `
<DocumentFragment>
  <div
    class="ant-row Grid__GridRow-sc-5irhjd-2"
    style="margin: -10px -10px -10px -10px;"
  >
    <div
      class="ant-col ant-col-24 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
      >
        <li
          class="styledComponents__List-sc-1kfpqgc-0 Dvaww"
        >
          Check for typos or use a different search term
        </li>
      </div>
    </div>
    <div
      class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI styledComponents__StyledGridCol-sc-1kfpqgc-1 gdXNzW"
      >
        <div
          class="styledComponents__ListWrapper-sc-1kfpqgc-2 hgqLmw"
        >
          <div
            class="ant-list ant-list-vertical ant-list-sm ant-list-split"
          >
            <div
              class="ant-list-header"
            >
              Suggestions
            </div>
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <ul
                  class="ant-list-items"
                >
                  <li
                    class="ant-list-item ant-list-item-no-flex"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <svg
                          data-testid="CaretRightList"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <a
                            href="/t/1234/venues"
                          >
                            Venues
                          </a>
                        </h4>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item ant-list-item-no-flex"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <svg
                          data-testid="CaretRightList"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <a
                            href="/t/1234/networks"
                          >
                            Networks
                          </a>
                        </h4>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item ant-list-item-no-flex"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <svg
                          data-testid="CaretRightList"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <a
                            href="/t/1234/devices/aps"
                          >
                            APs
                          </a>
                        </h4>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item ant-list-item-no-flex"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <svg
                          data-testid="CaretRightList"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <a
                            href="/t/1234/devices/switches"
                          >
                            Switches
                          </a>
                        </h4>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item ant-list-item-no-flex"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <svg
                          data-testid="CaretRightList"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <a
                            href="/t/1234/users/wifi/clients"
                          >
                            Wi-Fi Clients
                          </a>
                        </h4>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item ant-list-item-no-flex"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <svg
                          data-testid="CaretRightList"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <a
                            href="/t/1234/users/switches/clients"
                          >
                            Switch Clients
                          </a>
                        </h4>
                      </div>
                    </div>
                  </li>
                  <li
                    class="ant-list-item ant-list-item-no-flex"
                  >
                    <div
                      class="ant-list-item-meta"
                    >
                      <div
                        class="ant-list-item-meta-avatar"
                      >
                        <svg
                          data-testid="CaretRightList"
                        />
                      </div>
                      <div
                        class="ant-list-item-meta-content"
                      >
                        <h4
                          class="ant-list-item-meta-title"
                        >
                          <a
                            href="/t/1234/dashboard"
                          >
                            Dashboard
                          </a>
                        </h4>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
      style="padding: 10px 10px 10px 10px;"
    >
      <div
        class="Grid__Container-sc-5irhjd-1 zzbxI"
        style="display: none;"
      >
        <svg
          data-testid="SearchResultNoData"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
